<resources>
    <string name="app_name">slamstats</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_title">Sample Title</string>
    <string name="toolbarMain">Main Fragment</string>
    <string name="Welcome">Welcome to slamstats!</string>
    <string name="Description">Use the following inputs below\nto show the standings from\nthe top 15 basketball leagues\n
(Refer to list provided)</string>
    <string name="LeagueIDLabel">League ID:</string>
    <string name="SeasonLabel">Year of Season:</string>
    <string name="Generate">GENERATE</string>
    <string name="appInfo">This is an app that was created by Cole Davignon and Brooks Jackson.\nIt allows a user to
    input a number from the provided list, and the season\n which shows the rankings from that basketball season. </string>
    <string name="basketball_fragment">Basketball Fragment</string>
    <string name="ex_2019_2020">ex. 2019–2020</string>
    <string name="ex_12_is_nba">ex. 12 is NBA</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="home">Home</string>
</resources>