<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context="edu.quinnipiac.slamstats.ui.MainFragment">

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_gravity="center"
android:orientation="vertical"
android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:text="@string/Welcome"
        android:textColor="@color/black"
        android:textSize="48sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:text="@string/Description"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <View
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/jumpman_playstore"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/LeagueIDLabel"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextTextMultiLine1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/ex_12_is_nba"
        android:autofillHints="" />

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SeasonLabel"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextTextMultiLine2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/ex_2019_2020"
        android:autofillHints="" />

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <Button
        android:id="@+id/generateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Generate" />
</LinearLayout>
    </FrameLayout>